K8.Sample.AspNet.App/aksconfig_v5_Ingress/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dplmnt-dotnetapps-frontend
  namespace: ns-dotnetapps
spec:  
  selector:
    matchLabels:
      app: k8-sampleaspnetcore-web-app
  replicas: 3
  template:
    metadata:
      labels:
        app: k8-sampleaspnetcore-web-app
    spec:
      containers:
      - name: k8-sampleaspnetcore-web-app 
        image: hmptech/dotnet-webapp:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
