K8.Sample.AspNet.App/aksconfig_v5_Ingress/service-backend-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-backendapi-cluster-service
  namespace: ns-dotnetapps
spec:
  selector:
    app: k8-sampleaspnetcore-web-api
  ports:
    - port: 6002
      targetPort: 5002
