K8.Sample.AspNet.App/aksconfig_v5_Ingress/service-fronend-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8-fronend-cluster-service
spec:
  selector:
    app: k8-sampleaspnetcore-web-app
  ports:
    - port: 6001
      targetPort: 5001
